--- a/index.html
+++ b/index.html
@@ -3,36 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Self Intorduction</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #007acc;
-        }
-        p {
-            line-height: 1.6;
-        }
-    </style>
+    <title>Self Introduction</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Hello! This is Carol. </h1>
-        <p>I am a data driven storyteller. Experienced in analystics and engineering works.</p>
-        <p>I build my professional career, also explore any exciting opportunities. </p>
-        <p>Welcome to my Journey!</p>
-    </div>
+    <header id="header">
+        <nav>
+            <ul>
+                <li><a href="#section1">Home</a></li>
+                <li><a href="#section2">About Me</a></li>
+                <li><a href="#section3">Projects</a></li>
+                <li><a href="#section4">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="section1" class="section">
+        <h1>Welcome to My Portfolio</h1>
+    </section>
+
+    <section id="section2" class="section">
+        <div class="container">
+            <h1>Hello! This is Carol.</h1>
+            <p>I am a data driven storyteller. Experienced in analytics and engineering works.</p>
+            <p>I build my professional career, also explore any exciting opportunities.</p>
+            <p>Welcome to my Journey!</p>
+        </div>
+    </section>
+
+    <section id="section3" class="section">
+        <h2>My Projects</h2>
+        <p>Details about your projects...</p>
+    </section>
+
+    <section id="section4" class="section">
+        <h2>Contact Me</h2>
+        <p>Contact information...</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 My Portfolio</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
